--- a/index.css
+++ b/index.css
@@ -24,3 +24,11 @@ img:hover {
   -ms-transform: scale(1.04);
   transform: scale(1.04);
 }
+
+.swipe_interface:hover {
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -o-transform: scale(1.25);
+  -ms-transform: scale(1.25);
+  transform: scale(1.25);
+}
